--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-         "laravelrus/sleepingowl": "4.*@dev"
+         "laravelrus/sleepingowl": "4.*@dev",
+         "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
