--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-         "laravelrus/sleepingowl": "4.*@dev",
-         "zizaco/entrust": "5.2.x-dev"
+        "laravelcollective/html": "5.6.*",
+        "laravelrus/sleepingowl": "4.*@dev",
+        "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
