--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.6.*",
         "laravelrus/sleepingowl": "4.*@dev",
+        "league/flysystem-aws-s3-v2": "~1.0",
+        "league/flysystem-rackspace": "~1.0",
         "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
