--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "league/flysystem-aws-s3-v2": "~1.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "league/flysystem-rackspace": "~1.0",
         "zizaco/entrust": "5.2.x-dev",
         "laravelcollective/html": "5.6.*"
@@ -18,9 +18,10 @@
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laracasts/integrated": "^0.15.6",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.3"
     },
     "autoload": {
         "classmap": [
