--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Play.local
+APP_NAME=VitaliyStulnev
 APP_ENV=local
 APP_KEY=base64:DkN6fhL0yd5DypWfL7NfPYSQkvteD0hpWS7S4noEMC8=
 APP_DEBUG=true
