--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-public/images/uploads/notes/*.png
-public/images/uploads/notes/*.jpg
+public/images/uploads/notes/*
+public/images/uploads/notes/*
+public/images/uploads/blogImages/*
